Fix for bug #13251: gfx text fields are not accepting input Reenabled call to ClearSelection() in nsTextEditRules::WillInsert().